Refresh labs, decks/pdf, and README from bootcamp (no slides).